@@ -1,1 +1,2 @@
+2008-01-23: 0.9.3 added an option to swap up- and downstream
 2008-01-22: 0.9.2 added options to specify local and remote ports
